--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,8 @@
 body {
+  margin: 0;
   overflow: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f2f4f7;
 }
 
 .grid-container {
@@ -7,9 +10,9 @@ body {
   width: 100vw;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 0.2fr 8fr;
+  grid-template-rows: auto 1fr auto;
   gap: 1px 1px;
-  grid-template-areas: "header" "content";
+  grid-template-areas: "header" "content" "footer";
 }
 
 .content {
@@ -17,6 +20,7 @@ body {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
   gap: 1px 1px;
+  height: 0.8fr;
   grid-template-areas: "fundDetailsArea marketsArea";
   grid-area: content;
   overflow: hidden;
@@ -25,7 +29,7 @@ body {
 .fundDetailsArea {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 0.2fr 0.8fr;
+  grid-template-rows: auto 1fr;
   gap: 1px 1px;
   grid-template-areas: "fundDetailsAreaHeaderArea" "fundDetailsAreaContentArea";
   grid-area: fundDetailsArea;
@@ -42,19 +46,35 @@ body {
 .marketsArea {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 0.2fr 0.4fr 0.4fr;
+  grid-template-rows: auto auto 1fr;
   gap: 1px 1px;
-  grid-template-areas: "marketsAreaHeaderArea" "dayOneMarketsArea" "asapMarketsArea";
+  grid-template-areas: "marketsAreaHeaderArea" "addMarketsButtonsArea" "marketsTablesArea";
   grid-area: marketsArea;
-  overflow-y: scroll;
+  overflow: hidden;
+  /* overflow-y: scroll; */
 }
 
 .fundDetailsArea,
 .marketsArea {
   border: solid 1px;
+  padding-left: 10px;
   /* overflow-y: scroll; */
 }
 
+.addMarketsButtonsArea {
+  grid-area: addMarketsButtonsArea;
+  text-align: center;
+  /* align-content: center; */
+}
+
+.addMarketsButton {
+  display: inline-block;
+}
+
+.marketsTablesArea {
+  overflow-y: scroll;
+  grid-area: marketsTablesArea;
+}
 .marketsAreaHeaderArea {
   grid-area: marketsAreaHeaderArea;
 }
@@ -73,10 +93,57 @@ body {
   grid-area: header;
 }
 
+.footer {
+  grid-area: footer;
+}
+
+.footer,
+.header {
+  background-color: #083680;
+  color: white;
+  text-align: center;
+}
+
+.header {
+  box-shadow: 5px 5px 10px black;
+}
+
 table,
 th,
 td {
   border: 1px solid black;
+  background-color: white;
+}
+
+table {
+  border-spacing: 0px;
+  border-radius: 5px;
+}
+
+.datescol {
+  width: 95px;
+}
+
+.inputArea {
+  padding: 0;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+.fundInput {
+  border: 1.5px solid black;
+  border-radius: 5px;
+  padding: 3px;
+  width: 200px;
+  margin-right: 10px;
+}
+
+#fname {
+  width: 500px;
+}
+
+#datesArea {
+  margin: 15px 0px;
 }
 
 *,
@@ -98,6 +165,7 @@ td {
   width: 300px;
   max-width: 80%;
   height: 80%;
+  text-align: left;
 }
 
 .modal.active {
