--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ body {
 
 .fundDetailsArea,
 .marketsArea {
-  border: solid 1px;
+  /* border: solid 1px; */
   padding-left: 10px;
   /* overflow-y: scroll; */
 }
@@ -71,10 +71,6 @@ body {
   display: inline-block;
 }
 
-.marketsTablesArea {
-  overflow-y: scroll;
-  grid-area: marketsTablesArea;
-}
 .marketsAreaHeaderArea {
   grid-area: marketsAreaHeaderArea;
 }
@@ -146,6 +142,40 @@ table {
   margin: 15px 0px;
 }
 
+tr > .datescol {
+  text-align: center;
+}
+
+.blueButton {
+	box-shadow:inset 0px 1px 0px 0px #54a3f7;
+	background:linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
+	background-color:#007dc1;
+	border-radius:3px;
+	border:1px solid #124d77;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	padding:6px 12px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #154682;
+}
+button:hover, .close-button:hover {
+	background:linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
+	background-color:#0061a7;
+}
+button:active, .close-button:active {
+	position:relative;
+	top:1px;
+}
+
+.marketsTablesArea {
+  overflow-y: scroll;
+  grid-area: marketsTablesArea;
+  margin: 10px 0px 0px 0px;
+}
+
 *,
 *::after,
 *::before {
@@ -183,7 +213,7 @@ table {
 .modal-footer {
   padding: 10px 15px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   /* border-bottom: 1px solid black; */
 }
@@ -224,6 +254,50 @@ table {
 #overlay.active {
   opacity: 1;
   pointer-events: all;
+}
+
+h2 {
+  text-decoration: underline;
+}
+
+#fundButtonsArea {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px 30px 0px 5px;
+}
+
+.content {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+h4 {
+  margin: 10px 0px 0px 0px;
+}
+
+#day1header {
+  display: inline;
+}
+
+#day1tagline {
+  display: inline;
+}
+
+#redDate {
+  background-color: red;
+  color: white;
+}
+
+#greenDate {
+  background-color: lime;
+}
+
+#timeframeNote {
+  margin: 100px 20px 0px 5px;
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: lightyellow;
 }
 
 /* Ul {
